# server

./: .gitignore  README.md  data_models.py  database.py  models.py  movie.db  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-report.md
app/: api.py
app/utils/: send_email.py
fastapi-react/backend/: main.py  requirements.txt
fastapi-react/frontend/: package-lock.json
