[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.17.6"
sqlalchemy = "^2.0.25"
cryptography = "^42.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
